# ioselectors-cpp

./: CMakeLists.txt  README.md
src/: BaseSelector.h  CMakeLists.txt  DefaultSelector.cc  DefaultSelector.h  EpollSelector.cc  EpollSelector.h
src/test/: CMakeLists.txt  EpollSelectorUnitTest.h  testAllSelector.cc  testEpollSelector.cc  testEpollSelector.h
test/: CMakeLists.txt  EpollSelectorUnitTest.cc  EpollSelectorUnitTest.h
test/utils/: Utils.cc  Utils.h
test/utils/test/: CMakeLists.txt  UtilsUnitTest.cc
